--- a/.github/workflows/Share_Data_Between_Jobs.yml
+++ b/.github/workflows/Share_Data_Between_Jobs.yml
@@ -38,7 +38,7 @@ jobs:
   job_3:
     name: Display results
     needs: job_2
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
       - name: Download math result for job 2
         uses: actions/download-artifact@v3
