--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+/[Bb]uild/
+!**/[Ll]og/
+**/[Ll]og/*
+!**/[Ll]og/*.cshtml
+!**/[Ll]og/*.cs
+
+.parcel-cache/
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -180,12 +188,12 @@ DocProject/Help/html
 publish/
 
 # Publish Web Output
-*.[Pp]ublish.xml
+#*.[Pp]ublish.xml
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
-*.publishproj
+#*.pubxml
+#*.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
