- Added Manual run of the workflows. - Changed CodeQL Action to v2.

--- a/.github/workflows/Build-Test-Pack.yml
+++ b/.github/workflows/Build-Test-Pack.yml
@@ -1,6 +1,16 @@
 ﻿name: .Net 7 CI
 
-on: [push]
+on:
+
+  push:
+    branches: [main]
+
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: "The reason for running the workflow"
+        required: true
+        default: "Manual run"
 
 jobs:
   build_and_test:
