--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,18 +1,19 @@
 name: "CodeQL"
 
 on:
+
   push:
     branches: [main]
     paths:
     - '**.cs'
     - '**.csproj'
-  pull_request:
-    branches: [main]
-    paths:
-    - '**.cs'
-    - '**.csproj'
-  schedule:
-    - cron: '0 8 * * 4'
+
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: "The reason for running the workflow"
+        required: true
+        default: "Manual run"
 
 jobs:
   analyze:
@@ -35,12 +36,12 @@ jobs:
       if: ${{ github.event_name == 'pull_request' }}
 
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
+      uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
 
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+      uses: github/codeql-action/autobuild@v2
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      uses: github/codeql-action/analyze@v2
