Update codeql-analysis.yml permissions

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,6 +10,11 @@ on:
         required: true
         default: "Manual run"
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+  
 jobs:
   analyze:
     name: analyze
