--- a/src/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi.csproj
@@ -6,6 +6,7 @@
 		Sdk="Microsoft.NET.Sdk.Web" />
 
 	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
 		<DebugMsBuild>true</DebugMsBuild>
 		<AddSourceLink>true</AddSourceLink>
 		<Docs>false</Docs>
