--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,8 +36,16 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    - name: Setup .NET Core 7 SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '7.0.x'
+
+    - name: Install dependencies
+      run: dotnet restore /property:Configuration=Debug
+
+    - name: Build
+      run: dotnet build --configuration Debug --no-restore
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
