--- a/.github/workflows/Build-Test-Pack.yml
+++ b/.github/workflows/Build-Test-Pack.yml
@@ -1,9 +1,9 @@
 ﻿name: .Net 7 CI
 
 on:
-
   push:
     branches: [main]
+    paths: [ 'src/**', 'test/**', 'Directory.Build.props', 'projects.props', 'global.json' ]
 
   workflow_dispatch:
     inputs:
