--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,6 +3,7 @@ name: "CodeQL"
 on:
   push:
     branches: [main]
+    paths: [ 'src/**', 'test/**', 'Directory.Build.props', 'projects.props', 'global.json' ]
   workflow_dispatch:
     inputs:
       reason:
