--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,11 +5,6 @@ on:
     branches: [main]
     paths: [ 'src/**', 'test/**', 'Directory.Build.props', 'projects.props', 'global.json' ]
   workflow_dispatch:
-    inputs:
-      reason:
-        description: "The reason for running the workflow"
-        required: true
-        default: "Manual run"
 
 permissions:
   actions: read
@@ -41,12 +36,16 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
+        dotnet-quality: 'preview'
 
-    - name: Install dependencies
-      run: dotnet restore /property:Configuration=Debug
+    #- name: Install dependencies
+    #  run: dotnet restore /property:Configuration=Debug
 
-    - name: Build
-      run: dotnet build --configuration Debug --no-restore
+    #- name: Build
+    #  run: dotnet build --configuration Debug --no-restore
+
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
