--- a/.github/workflows/webapps-dotnet-core.yml
+++ b/.github/workflows/webapps-dotnet-core.yml
@@ -1,7 +1,7 @@
 name: Build and deploy ASP.Net Core app
 
 env:
-  DOTNET_VERSION: '7'                 # set this to the .NET Core version to use
+  DOTNET_VERSION: '7.0.x'
 
 on:
   workflow_dispatch:
