--- a/src/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi.csproj
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-	<Import
-		Project="Sdk.props"
-		Sdk="Microsoft.NET.Sdk.Web" />
-
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
 		<DebugMsBuild>true</DebugMsBuild>
 		<AddSourceLink>true</AddSourceLink>
 		<Docs>false</Docs>
@@ -14,18 +9,15 @@
 		<SkipObj>false</SkipObj>
 		<IsTestProj>false</IsTestProj>
 	</PropertyGroup>
+	
+	<Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk.Web" />
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+	</PropertyGroup>
+	<Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk.Web" />
 
-	<Import
-		Project="Sdk.targets"
-		Sdk="Microsoft.NET.Sdk.Web" />
-
-	<ItemGroup
-		Label="SourceLinkPackages"
-		Condition=" '$(AddSourceLink)' == 'true' ">
-		<PackageReference
-			Include="Microsoft.SourceLink.GitHub"
-			Version="8.0.0"
-			PrivateAssets="All"/>
+	<ItemGroup Condition=" '$(AddSourceLink)' == 'true' " Label="SourceLinkPackages">
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
 </Project>
