--- a/test/UnitTests/UnitTests.csproj
+++ b/test/UnitTests/UnitTests.csproj
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-	<Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk.Web" />
-
 	<PropertyGroup>
 		<DebugMsBuild>true</DebugMsBuild>
 		<AddSourceLink>false</AddSourceLink>
@@ -10,9 +8,13 @@
 		<SkipBin>false</SkipBin>
 		<SkipObj>false</SkipObj>
 		<IsTestProject>true</IsTestProject>
+	</PropertyGroup>
+	
+	<Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk.Web" />
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
-
 	<Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk.Web" />
 
 	<ItemGroup>
