--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -5,7 +5,6 @@ on:
 
 env:
   SOLUTION_FILE_PATH: .
-
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -18,19 +17,63 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v4
+  
+    - name: Get the source code
+      uses: actions/checkout@v4
+
+    - name: Setup MSBuild (vswhere-path)
+      id: setup_msbuild_explicit
+      uses: microsoft/setup-msbuild@v2.0.0
+      with:
+        vswhere-path: C:\ProgramData\chocolatey\bin
+
+    - name: Setup MSBuild (PATH)
+      id: setup_msbuild_path
+      uses: microsoft/setup-msbuild@v2.0.0
+
+    - name: Setup MSBuild (fallback)
+      id: setup_msbuild_fallback
+      uses: microsoft/setup-msbuild@v2.0.0
+      env:
+        PATH: ''
+
+    - name: Setup MSBuild (x64)
+      if: always()
+      id: setup_msbuild_path_x64
+      uses: microsoft/setup-msbuild@v2.0.0
+      with:
+        vs-prerelease: true
+        msbuild-architecture: 'x64'
+
+    - name: Setup MSBuild (arm64)
+      if: always()
+      id: setup_msbuild_path_arm
+      uses: microsoft/setup-msbuild@v2.0.0
+      with:
+        vs-prerelease: true
+        msbuild-architecture: 'arm64'
+
+    - name: MSBuild path
+      run: |
+        echo "vswhere-path: ${{ steps.setup_msbuild_explicit.outputs.msbuildPath }}"
+        echo "PATH        : ${{ steps.setup_msbuild_path.outputs.msbuildPath }}"
+        echo "Fallback    : ${{ steps.setup_msbuild_fallback.outputs.msbuildPath }}"
+        echo "X64 PATH    : ${{ steps.setup_msbuild_path_x64.outputs.msbuildPath }}"
+        echo "ARM PATH    : ${{ steps.setup_msbuild_path_arm.outputs.msbuildPath }}"
+
+    - name: MSBuild version
+      run: msbuild -version
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2.0.0
 
     - name: Restore NuGet packages
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+      working-directory: ${{ env.GITHUB_WORKSPACE }}
+      run: nuget restore ${{ env.SOLUTION_FILE_PATH }}
 
     - name: Build
-      working-directory: ${{env.GITHUB_WORKSPACE}}
+      working-directory: ${{ env.GITHUB_WORKSPACE }}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} ${{ env.SOLUTION_FILE_PATH }}
