--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,7 @@
 name: Greetings
 
 # on: [pull_request_target, issues]
+
 on:
   pull_request:
     branches: [main]
@@ -12,19 +13,20 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     permissions:
+      pull-requests: write  
       issues: write
-      pull-requests: write
-
     steps:
+    - uses: actions/checkout@v4
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-
         issue-message: |
           Hello! Thank you for filing an issue.
+          
           If this is a bug report, please include relevant logs to help us debug the problem.
-
         pr-message: |
           Hello! Thank you for your contribution.
+          
           If you are fixing a bug, please reference the issue number in the description.
+
           If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
