--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -4,11 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  SOLUTION_FILE_PATH: .
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: Release
+  Solution_Name: Github.Actions.sln
 
 permissions:
   contents: read
@@ -17,10 +13,15 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-    steps:
-  
+    strategy:
+      matrix:
+        configuration: [Debug, Release]
+
+    steps:  
     - name: Get the source code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup MSBuild (vswhere-path)
       id: setup_msbuild_explicit
@@ -63,10 +64,12 @@ jobs:
 
     - name: Restore NuGet packages
       working-directory: ${{ env.GITHUB_WORKSPACE }}
-      run: nuget restore ${{ env.SOLUTION_FILE_PATH }}
+      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
 
     - name: Build
       working-directory: ${{ env.GITHUB_WORKSPACE }}
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild ${{ env.SOLUTION_FILE_PATH }} -t:rebuild -property:Configuration=${{ env.BUILD_CONFIGURATION }}
+      run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
