--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, ubuntu-latest]
         nuget: [latest, preview, 4.x, 5.3.1]
 
     steps:
