--- a/.github/workflows/NuGet.yml
+++ b/.github/workflows/NuGet.yml
@@ -5,11 +5,11 @@ on:
 
 jobs:
   build:
-    name: NuGet@${{ matrix.nuget }} sample
+    name: NuGet@${{ matrix.nuget }} ${{ matrix.os }} sample
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
+        os: [windows-latest]
         nuget: [latest, preview, 4.x, 5.3.1]
 
     steps:
@@ -23,5 +23,12 @@ jobs:
         with:
           nuget-version: ${{ matrix.nuget }}
 
+      - uses: actions/cache@v4
+        id: cache
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+
       - name: Restore NuGet packages
+        if: steps.cache.outputs.cache-hit != 'true'
         run: nuget restore Github.Actions.sln
