--- a/projects.props
+++ b/projects.props
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup>
@@ -23,8 +23,8 @@
 		<AssemblyTitle   Condition=" '$(AssemblyTitle)'   == '' ">$([System.Text.RegularExpressions.Regex]::Replace($(AssemblyName), `((?&lt;=[a-z])[A-Z]|[A-Z](?=[a-z]))`, ' $1'))</AssemblyTitle>
 		<Title           Condition=" '$(Title)'           == '' ">$(AssemblyTitle)</Title>
 		<RootNamespace   Condition=" '$(RootNamespace)'   == '' ">$(AssemblyName.Replace(" ", "_"))</RootNamespace>
-		<AssemblyVersion Condition=" '$(AssemblyVersion)' == '' ">1.0.0.1</AssemblyVersion>
-		<FileVersion     Condition=" '$(FileVersion)'     == '' ">1.0.0.1</FileVersion>
+		<AssemblyVersion Condition=" '$(AssemblyVersion)' == '' ">1.0.0.0</AssemblyVersion>
+		<FileVersion     Condition=" '$(FileVersion)'     == '' ">1.0.0.0</FileVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Label="GlobalSettingsEnums">
@@ -120,10 +120,10 @@
 	<PropertyGroup Label="Packaging">
 		<PackageId>$(AssemblyName)</PackageId>
 		<Product>$(AssemblyName)</Product>
-		<Version>1.0.0.0</Version>
-		<Authors>khvb6</Authors>
+		<Version>1.0.2</Version>
+		<Authors>khaled</Authors>
 		<Company>None. Ltd.</Company>
-		<Copyright>Copyright @ 2023</Copyright>
+		<Copyright>Copyright @ 2025</Copyright>
 		<Description>This is A Test Web Api</Description>
 		<PackageTags>web;net;api</PackageTags>
 		<PackageReleaseNotes>
