--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -2,8 +2,8 @@ name: WebApi Package
 
 on:
   workflow_dispatch:
-  release:
-    types: [ created ]
+  push:
+    branches: [main]
 
 jobs:
   build:
