--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -55,7 +55,7 @@ jobs:
   release:
     runs-on: ubuntu-latest    
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     
     steps:  
       - name: Download nuget package artifact
