--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Push package to GitHub packages 
         if: needs.build.outputs.CommitsSinceVersionSource > 0
-        run: dotnet nuget push Build/AppPackages/*.nupkg --api-key ${{ secrets.NUGET_PACKAGE_TOKEN }}  --source "github"
+        run: dotnet nuget push nugetPackage/Build/AppPackages/*.nupkg --api-key ${{ secrets.NUGET_PACKAGE_TOKEN }}  --source "github"
     
       - name: Create Release
         if: 1 == 0
