--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: nugetPackage
-          path: ./Build/AppPackages
+          path: ./Build
 
   release:
     runs-on: ubuntu-latest    
@@ -71,7 +71,7 @@ jobs:
 
       - name: Push package to GitHub packages 
         if: needs.build.outputs.CommitsSinceVersionSource > 0
-        run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.NUGET_PACKAGE_TOKEN }}  --source "github"
+        run: dotnet nuget push AppPackages/*.nupkg --api-key ${{ secrets.NUGET_PACKAGE_TOKEN }}  --source "github"
     
       - name: Create Release
         if: 1 == 0
